@@ -1,6 +1,6 @@
 MD5 9f120abc979cfbda9a8595ea7fa6c1a2 ipw2200-0.3.ebuild 2086
-MD5 52deb32733a380573a6c452d604ac0a3 ipw2200-0.4.ebuild 2086
-MD5 78d8990c87cda31d94303e0908b3e706 ChangeLog 711
+MD5 5c67ac089e17160b58cf2f29cf017a2d ipw2200-0.4.ebuild 2328
+MD5 e70555d19257023247c3f02e9b435f12 ChangeLog 849
 MD5 e33c43b256ce937ba82846532879e312 metadata.xml 219
 MD5 13bdb18aad2ee350659575449ba67113 files/digest-ipw2200-0.3 122
 MD5 4bf7fd9d6b68afc2a846b35e57bad566 files/digest-ipw2200-0.4 122
