@@ -1,6 +1,9 @@
 # ChangeLog for net-wireless/ipw2200
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/ipw2200/ChangeLog,v 1.2 2004/08/17 02:54:46 jbms Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/ipw2200/ChangeLog,v 1.3 2004/08/17 03:31:17 jbms Exp $
+
+  16 Aug 2004; Jeremy Maitin-Shepard <jbms@gentoo.org> ipw2200-0.4.ebuild:
+  Added a check for ARC4 cryptographic support in the kernel.
 
 *ipw2200-0.4 (16 Aug 2004)
 
